@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=dzco
-VERSION=1.4.2
+VERSION=1.4.3
 
-DEPENDENCY="zeda=1.5.7;zm=1.3.4"
+DEPENDENCY="zeda=1.5.10;zm=1.3.5"
